--- a/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
+++ b/src/Muzich/FavoriteBundle/Resources/views/Favorite/userList.html.twig
@@ -12,6 +12,23 @@
 
   <h2>{{ 'favorites.user_favorites'|trans({'%name%' : viewed_user.name}, 'network') }}</h2>
 
+  {% include "MuzichCoreBundle:Tag:tagsList.html.twig" with {
+    'user_id' : viewed_user.id
+  } %}
+
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
+    
+  <div class="elements_loader_div">
+    <img class="elements_more_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading" />
+  </div>
+  
+  {% if elements|length %}
+     <span class="elements_more">
+       <input type="hidden" id="more_elements_url" value="{{ path('favorite_get', {'user_id': viewed_user.id, 'tags_ids_json' : ''}) }}" />
+       <a href="{{ path('favorite_get', {'user_id': viewed_user.id, 'tags_ids_json' : tags_id_json}) }}" class="elements_more button">
+         {{ 'more'|trans({}, 'userui') }}
+       </a>
+     </span>
+  {% endif %}
     
 {% endblock %}
