--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -35,7 +35,11 @@
   
 
   <h2>{{ 'user.show.title'|trans({'%name%' : viewed_user.name}, 'users') }}</h2>
-  
+
+  {% include "MuzichCoreBundle:Tag:tagsList.show.html.twig" with {
+    'object_id'   : viewed_user.id,
+    'object_type' : 'user'
+  } %}
   
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
@@ -46,10 +50,16 @@
   {% if more_count is defined %} 
   {% if elements|length %}
    <span class="elements_more">
-     <a href="{{ path('search_elements_show_more_empty', {
-       'type'     : 'user', 
-       'object_id': viewed_user.id
-     }) }}" class="elements_more" >
+     <input type="hidden" id="more_elements_url" value="{{ path('show_elements_get', {
+        'type'          : 'user',
+        'object_id'     : viewed_user.id, 
+        'tags_ids_json' : ''
+      }) }}" />
+     <a href="{{ path('show_elements_get', {
+        'type'          : 'user',
+        'object_id'     : viewed_user.id, 
+        'tags_ids_json' : tags_id_json
+      }) }}" class="elements_more button" >
        {{ 'more'|trans({}, 'userui') }}
      </a>
    </span>
