class button sur la page groupes

--- a/src/Muzich/GroupBundle/Resources/views/Default/myList.html.twig
+++ b/src/Muzich/GroupBundle/Resources/views/Default/myList.html.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-  <a href="#" id="group_add_link">
+  <a href="#" id="group_add_link" class="button">
     {{ 'group.add_group'|trans({}, 'navigationui') }} &gt;&gt;
   </a>
 
@@ -36,7 +36,7 @@
 
   <div id="group_add_box" style="display: none;">
 
-    <a href="#" id="group_add_close_link">
+    <a href="#" id="group_add_close_link" class="button">
       &lt;&lt; {{ 'group.add_group_box.close'|trans({}, 'navigationui') }}
     </a>
     
