--- a/src/Muzich/HomeBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/layout.html.twig
@@ -9,7 +9,7 @@
 
 {% block main_content %}
   
-    {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': 'public', 'mygroups': false, 'myfavorites': true } %}
+    {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with { 'active': 'public' } %}
   
     {% block content %}{% endblock %}
   
