--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -101,7 +101,7 @@ input.button, button.button {
   padding: 0;
 }
 
-#container #top-tabs li, .top-tabs-right
+#container #top-tabs li
 {
   float: left;
   margin-left: 0px;
@@ -119,6 +119,34 @@ input.button, button.button {
   border-radius: 5px 5px 0px 0px;
   -moz-border-radius: 5px 5px 0px 0px;
   -webkit-border-radius: 5px 5px 0px 0px;
+}
+
+.top-tabs-right
+{
+  list-style: none outside none;
+}
+
+.top-tabs-right li
+{
+  float: left;
+  padding-top: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-bottom: 3px;
+  
+  background-color: #e9e9e9;
+  
+  border-top: 1px solid #d5d5d5;
+  border-left: 1px solid #d5d5d5;
+  border-right: 1px solid #d5d5d5;
+  border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 5px 5px 0px 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
+}
+
+.top-tabs-right li.active
+{
+  background-color: white;
 }
 
 #container #top-tabs li.active, .top-tabs-right ul.active, .top-tabs-right ul.active li
