Anomalie #105: Ajax et utilisateur déconnecté

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -27,6 +27,8 @@
     string_follow_stop = "{{ 'user.stop_follow'|trans({}, 'users') }}";
     string_follow_following = "{{ 'user.following'|trans({}, 'users') }}";
     string_follow_follow = "{{ 'user.follow'|trans({}, 'users') }}";
+    
+    url_index = "{{ path('index') }}";
   </script>
   {% block js %}{% endblock %}
   
