fix: une url était en hardcore pour la recherche de tag (js)

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -29,6 +29,7 @@
     string_follow_follow = "{{ 'user.follow'|trans({}, 'users') }}";
     
     url_index = "{{ path('index') }}";
+    url_search_tag = "{{ path('search_tag') }}";
   </script>
   {% block js %}{% endblock %}
   
