Anomalie #108: Prod: Version sur page info

--- a/src/Muzich/CoreBundle/Resources/views/Info/development.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/development.html.twig
@@ -7,7 +7,7 @@
   <h1>Muzich est en cours de construction</h1>
 
   <p>
-    Actuellement vous utilisez la version 0.1 de Muzich. De nombreuses 
+    Actuellement vous utilisez la version <strong>0.2 de</strong> Muzich. De nombreuses 
     fonctionnalités doivent voir le jours au fur et a mesure du développement.
   </p>
 
