--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -27,6 +27,7 @@
     string_follow_stop = "{{ 'user.stop_follow'|trans({}, 'users') }}";
     string_follow_following = "{{ 'user.following'|trans({}, 'users') }}";
     string_follow_follow = "{{ 'user.follow'|trans({}, 'users') }}";
+    string_tag_prompt_input_help = "{{ 'tags.inputtext.help'|trans({}, 'userui') }}";
     
     url_index = "{{ path('index') }}";
     url_search_tag = "{{ path('search_tag') }}";
