Evolution #115: Ajax sur tag et filtre

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -31,6 +31,7 @@
     
     url_index = "{{ path('index') }}";
     url_search_tag = "{{ path('search_tag') }}";
+    url_get_favorites_tags = "{{ path('ajax_get_favorites_tags') }}";
   </script>
   {% block js %}{% endblock %}
   
