Evolution #115: Ajax sur tag et filtre

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -100,7 +100,7 @@
       <ul class="element_tags">
         {% for tag in element.tags %} 
           <li class="element_tag">
-            {{ tag.name }}
+            <a href="#{{ tag.id }}" class="element_tag button">{{ tag.name }}</a>
           </li>
         {% endfor %} 
       </ul>
