Evolution #118: Elements: affiché la date de diffusion

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -91,6 +91,7 @@
           }, 'elements') }}
         {% endif %}
       {% endautoescape %}
+      {{ element.created.date|date_or_relative_date }}
       
       <div class="loader">
         <img class="element_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading"/>
