Remise en fo,ction de "afficher plus de tags" dans la recherche de tags.

--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -20,7 +20,9 @@
        <img id="tag_loader_{{ form_name }}" class="tag_loader" style="display: none;" src="{{ asset('/bundles/muzichcore/img/ajax-loader.gif') }}" alt="loading"/>
      </div>
      <ul class="search_tag_list"></ul>
-     <a class="more" href="#" style="display: none;">Afficher les autres tags correspondant a la recherche</a>
+     <a class="more button" href="#" style="display: none;">
+       Afficher les autres tags correspondant a la recherche
+     </a>
    </div>
 </div>
 
