Ajout de la fonctionnalité "ajouter un tag".  - Transparence pour l'utilisateur  - Modification de l'entité Tag (ajout de deux champs)

--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -21,7 +21,7 @@
      </div>
      <ul class="search_tag_list"></ul>
      <a class="more button" href="#" style="display: none;">
-       Afficher les autres tags correspondant a la recherche
+       {{ 'tags.search.display_more'|trans({}, 'userui') }}
      </a>
    </div>
 </div>
