--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -32,6 +32,7 @@
     url_index = "{{ path('index') }}";
     url_search_tag = "{{ path('search_tag') }}";
     url_get_favorites_tags = "{{ path('ajax_get_favorites_tags') }}";
+    url_add_tag = "{{ path('ajax_add_tag') }}";
   </script>
   {% block js %}{% endblock %}
   
