--- a/src/Muzich/AdminBundle/Resources/views/Moderate/layout.html.twig
+++ b/src/Muzich/AdminBundle/Resources/views/Moderate/layout.html.twig
@@ -1,10 +1,10 @@
 {% extends 'MuzichCoreBundle::layout.html.twig' %}
 
 {% block css %}
-	
+	<link href="{{ asset('bundles/muzichmoderate/css/moderate.css') }}" rel="stylesheet" media="screen" type="text/css" />
 {% endblock %}
 {% block js %}
-  
+  <script src="{{ asset('bundles/muzichmoderate/js/moderate.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block main_content %}
