Evolution #122: Tags ajouté par l'utilisateurs: nouvelle approche

--- a/src/Muzich/AdminBundle/Resources/views/Moderate/tags.html.twig
+++ b/src/Muzich/AdminBundle/Resources/views/Moderate/tags.html.twig
@@ -33,6 +33,10 @@
             
         </form>
           
+        <p>
+          {{ tag.arguments }}
+        </p>
+          
       </li>
     {% endfor %}
   </ul>
