--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -28,6 +28,11 @@
     string_follow_following = "{{ 'user.following'|trans({}, 'users') }}";
     string_follow_follow = "{{ 'user.follow'|trans({}, 'users') }}";
     string_tag_prompt_input_help = "{{ 'tags.inputtext.help'|trans({}, 'userui') }}";
+    string_tag_add_title = "{{ 'tags.add.title'|trans({}, 'userui') }}";
+    string_tag_add_text = "{{ 'tags.add.text'|trans({}, 'userui') }}";
+    string_tag_add_argument = "{{ 'tags.add.argument'|trans({}, 'userui') }}";
+    string_tag_add_inputs_cancel = "{{ 'tags.add.inputs.cancel'|trans({}, 'userui') }}";
+    string_tag_add_inputs_submit = "{{ 'tags.add.inputs.submit'|trans({}, 'userui') }}";
     
     url_index = "{{ path('index') }}";
     url_search_tag = "{{ path('search_tag') }}";
