css fix: underline du bouton editer un element.

--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -908,3 +908,10 @@ position: absolute;
 * html .popup_block {
 position: absolute;
 }
+
+/* END POPIN BLOCK */
+
+#container a.element_edit_link
+{
+  text-decoration: none;
+}
