bug fix: tag de groupe était perdu lors d'un edit.

--- a/src/Muzich/GroupBundle/Resources/views/Default/edit.html.twig
+++ b/src/Muzich/GroupBundle/Resources/views/Default/edit.html.twig
@@ -10,6 +10,8 @@
     
     {% include "MuzichGroupBundle:Form:form.html.twig" %}
 
+    {{ form_widget(form.tags, { 'attr': {'class': 'tagBox_tags_ids'} }) }}
+    
     <input type="submit" class="button" />
   </form>
 
