--- a/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
@@ -1,5 +1,5 @@
 
-<form class="edit_element" name="{{ form_name }}" action="{{ path('element_update', {'element_id': element_id}) }}" method="post" {{ form_enctype(form) }}>
+<form novalidate class="edit_element" name="{{ form_name }}" action="{{ path('element_update', {'element_id': element_id}) }}" method="post" {{ form_enctype(form) }}>
 
   {% include "MuzichCoreBundle:Element:form.edit.html.twig" with { 
     'form'          : form, 
