Evolution #125: Actualisation des éléments ajax

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -38,6 +38,8 @@
     url_search_tag = "{{ path('search_tag') }}";
     url_get_favorites_tags = "{{ path('ajax_get_favorites_tags') }}";
     url_add_tag = "{{ path('ajax_add_tag') }}";
+    url_element_new_count = "{{ path('element_new_count') }}";
+    url_element_new_get = "{{ path('element_new_get') }}";
   </script>
   {% block js %}{% endblock %}
   
