--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -10,6 +10,8 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
+  <link href="apple-touch-icon.png" rel="apple-touch-icon">
+  
 	
 	<link href="{{ asset('favicon.ico') }}" rel="icon" type="image/x-icon" />
 	<link href="{{ asset('bundles/muzichcore/css/base.css') }}" rel="stylesheet" media="screen" type="text/css" />
