Evolution #126: Petites modifs ergonomiques

--- a/src/Muzich/CoreBundle/Resources/views/Info/about.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/about.html.twig
@@ -4,6 +4,8 @@
 
 {% block main_content %}
 
+  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': 'myfavorites'} %}
+
   <h1>Découvrez et partagez la musique d'internet</h1>
 
   <p>
