--- a/src/Muzich/CoreBundle/Resources/views/Info/development.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/development.html.twig
@@ -4,10 +4,12 @@
 
 {% block main_content %}
 
+  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': 'myfavorites'} %}
+
   <h1>Muzich est en cours de construction</h1>
 
   <p>
-    Actuellement vous utilisez la version <strong>0.2 de</strong> Muzich. De nombreuses 
+    Actuellement vous utilisez la version <strong>0.3</strong> de Muzich. De nombreuses 
     fonctionnalités doivent voir le jours au fur et a mesure du développement.
   </p>
 
