--- a/src/Muzich/CoreBundle/Resources/views/Info/sites.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Info/sites.html.twig
@@ -4,6 +4,8 @@
 
 {% block main_content %}
 
+  {% include "MuzichCoreBundle:Menu:containerMenu.html.twig" with {'active': 'myfavorites'} %}
+
   <h1>Liste des sites supportés</h1>
 
   <p>
