--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -26,7 +26,7 @@
 
 #container h1
 {
-  
+  margin-top: 11px;
 }
 #container h2
 {
@@ -389,7 +389,7 @@ width: 300px;
 /**/
 
 ul.tagbox {
-background: #fff;
+
 cursor: text;
 border: none;
 overflow: hidden;
@@ -441,7 +441,7 @@ border: 0;
 outline: 0;
 line-height:1.2;
 padding: 3px 0;
-font-size:12px;
+font-size: 105%;
 }
 ul.tagbox a.close {
 position: absolute;
@@ -622,9 +622,9 @@ ul.tagbox li.input
 
 ul.tagbox input[type="text"]
 {
-  height: 14px;
+  height: 16px;
   margin-top: 3px;
-  width: 200px;
+  width: 250px;
   color: #676767;
   font-weight: bold;
 }
@@ -920,4 +920,16 @@ div.display_more_elements
 {
   background-color: #D9F7FF;
   text-align: center;
+}
+
+input#element_add_url, input#element_add_name
+{
+  width: 70%;
+  font-size: 110%;
+  font-weight: bold;
+}
+
+label#element_add_url, label#element_add_name
+{
+  
 }
