--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/element.html.twig
@@ -111,6 +111,29 @@
         {{ 'element.show.close_embed'|trans({}, 'elements') }}
       </a>
       
+      
+      {% autoescape false %}
+        {% if element.comments|length > 1 %}
+          <a href="#hide_comments_{{ element.id }}" class="hide_comments" style="display: none;">
+            {{ 'element.comments.hideare'|trans({}, 'elements') }}
+          </a>   
+          <a href="#comments_{{ element.id }}" class="display_comments">
+            {{ 'element.comments.thereare'|trans({'%count%':element.comments|length}, 'elements') }}
+          </a> -
+        {% elseif element.comments|length == 1 %}
+          <a href="#hide_comments_{{ element.id }}" class="hide_comments" style="display: none;">
+            {{ 'element.comments.hideis'|trans({}, 'elements') }}
+          </a>
+          <a href="#comments_{{ element.id }}" class="display_comments">
+            {{ 'element.comments.thereis'|trans({}, 'elements') }}
+          </a> -
+        {%endif %}
+      {% endautoescape %}
+                
+      <a href="#add_comment_{{ element.id }}" class="add_comment">
+        {{ 'element.comments.add'|trans({}, 'elements') }}
+      </a>
+      
     </td>
   </tr>
 </table>
@@ -121,4 +144,25 @@
       {{ element.embed }}
     </div>
   {% endautoescape %}
+{% endif %}
+
+{% if element.comments|length %}
+  <div class="comments" style="display: none;">
+    <ul class="comments">
+      {% for comment in element.comments %}
+        <li class="comment">
+          <a href="{{ path('show_user', {'slug': comment.u.s}) }}" >{{ comment.u.n }}</a>: 
+          {{ comment.c }}
+          <span class="datesince">({{ comment.d|date_or_relative_date }})</span>
+        </li>
+      {% endfor %}
+    </ul>
+      
+    
+      
+    <a href="#add_comment_{{ element.id }}" class="add_comment">
+      {{ 'element.comments.add'|trans({}, 'elements') }}
+    </a>
+      
+  </div>
 {% endif %}
