--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -933,3 +933,31 @@ label#element_add_url, label#element_add_name
 {
   
 }
+
+/* Commentaire */
+
+li.element div.comments
+{
+  padding-left: 18px;
+  padding-right: 18px;
+}
+
+div.comments ul.comments
+{
+  margin: 0px 0px 0px 0px;
+}
+
+li.comment
+{
+  list-style: none;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  border-bottom: 1px dotted #d9d9d9;
+}
+
+li.comment span.datesince
+{
+  color: #868686;
+}
+
+/* END commentaires */
