bug js fix: erreur dans les variables (logique de prog). On précise maintenant l'id de l'élément que l'on doit modifier après post en ajax.

--- a/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/ajax.element.edit.html.twig
@@ -1,5 +1,11 @@
 
-<form novalidate class="edit_element" name="{{ form_name }}" action="{{ path('element_update', {'element_id': element_id}) }}" method="post" {{ form_enctype(form) }}>
+<form 
+  novalidate
+  class="edit_element" 
+  name="{{ form_name }}" 
+  action="{{ path('element_update', {'element_id': element_id, 'dom_id': 'element_' ~ element_id}) }}" 
+  method="post" {{ form_enctype(form) }}
+>
 
   {% include "MuzichCoreBundle:Element:form.edit.html.twig" with { 
     'form'          : form, 
