Evolution #158: hardcore string

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -34,6 +34,12 @@
     string_tag_add_argument = "{{ 'tags.add.argument'|trans({}, 'userui') }}";
     string_tag_add_inputs_cancel = "{{ 'tags.add.inputs.cancel'|trans({}, 'userui') }}";
     string_tag_add_inputs_submit = "{{ 'tags.add.inputs.submit'|trans({}, 'userui') }}";
+    string_element_delete_confirm_sentence = "{{ 'element.remove.confirm.sentence'|trans({}, 'elements') }}";
+    string_element_delete_confirm_yes = "{{ 'element.remove.confirm.yes'|trans({}, 'elements') }}";
+    string_element_delete_confirm_no = "{{ 'element.remove.confirm.no'|trans({}, 'elements') }}";
+    string_comment_delete_confirm_sentence = "{{ 'comment.remove.confirm.sentence'|trans({}, 'elements') }}";
+    string_comment_delete_confirm_yes = "{{ 'comment.remove.confirm.yes'|trans({}, 'elements') }}";
+    string_comment_delete_confirm_no = "{{ 'comment.remove.confirm.no'|trans({}, 'elements') }}";
     
     url_index = "{{ path('index') }}";
     url_search_tag = "{{ path('search_tag') }}";
